img stretch issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -464,3 +464,7 @@ body {
   font-size: 1.2rem;
   color: var(--mainGreen);
 }
+.details-img {
+  max-width: 100% !important;
+  height: auto !important;
+}
